--- a/styles/main.css
+++ b/styles/main.css
@@ -1,41 +1,53 @@
-.start-panel {
 
+.start-panel {
+    display: grid;
+    grid-template-columns: 50px 170px 1fr;
 }
 .start-panel__icons {
-
+    display: grid;
+    grid-template-rows: 1fr repeat(5, 50px);
 }
 .start-panel__grid {
-
+    display: grid;
+    grid-template-areas: 
+    "office other ."
+    "web other .";
+    grid-auto-rows: auto;
+    gap: 0.5em;
 }
-.apps--office {
 
-}
-.apps--web {
+.apps--office {grid-area: office}
+.apps--web {grid-area: web}
+.apps--other {grid-area: other}
 
-}
-.apps--other {
-
-}
 .apps__grid {
-
+    display: grid;
+    grid-template-columns: repeat(6, 50px);
+    grid-auto-rows: 50px;
+    gap: 0.5em;
 }
 .app--g2x2 {
-
+    grid-column: span 2;
+    grid-row: span 2;
 }
 .app--g2x1 {
-
+    grid-column: span 1;
+    grid-row: span 2;
 }
 .app--g1x2 {
-
+    grid-column: span 2;
+    grid-row: span 1;
 }
 .app--off-3 {
-
+    grid-column: -5 / -4;
+    grid-row: 3 / span 1;
 }
 .app--off-4 {
-
 }
 .app--off-5 {
 
+    grid-column: 5 / 7;
+    grid-row: 1 / 2;
 }
 .app--in-3 {
 
