--- a/styles/main.css
+++ b/styles/main.css
@@ -16,9 +16,9 @@
     gap: 0.5em;
 }
 
-.apps--office {grid-area: office}
-.apps--web {grid-area: web}
-.apps--other {grid-area: other}
+.apps--office { grid-area: office }
+.apps--web { grid-area: web }
+.apps--other { grid-area: other }
 
 .apps__grid {
     display: grid;
@@ -43,6 +43,7 @@
     grid-row: 3 / span 1;
 }
 .app--off-4 {
+
 }
 .app--off-5 {
 
@@ -50,9 +51,12 @@
     grid-row: 1 / 2;
 }
 .app--in-3 {
-
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
 }
 .app--fun-2 {
+    grid-column: 4 / 6;
+    grid-row: 1 / 3;
 
 }
 .app--fun-3 {
