--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@
     grid-template-areas: 
     "office other"
     "web other";
-    grid-auto-rows: auto;
+    grid-auto-rows: max-content;
     gap: 0.5em;
 }
 
@@ -46,11 +46,12 @@
     grid-column: 5 / 7;
     grid-row: 2 / 4;
 }
-.app--off-5 {
 
+.app--off-5 {
     grid-column: 5 / 7;
     grid-row: 1 / 2;
 }
+
 .app--in-3 {
     grid-column: 3 / 4;
     grid-row: 1 / 3;
